--- a/BJJInParadise.Web/Views/Shared/_Layout.cshtml
+++ b/BJJInParadise.Web/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 
                     }
                 }
-                <a class="navbar-brand js-scroll-trigger" href="@Url.Action("Index", "Home")">BJJ In Paradise</a>
+                <a class="navbar-brand js-scroll-trigger" href="@Url.Action("Index", "Home")"></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fa fa-bars"></i>
